[package]
name = "tca9555"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
keywords = ["embedded-hal"]
readme = "../README.md"
description = "Embedded-HAL driver crate for the TCA9555/TCA9535 16 port I/O expander."
repository = "https://github.com/sciguy16/tca9555"

[features]
default = ["unproven"]
unproven = ["embedded-hal/unproven"]
use_defmt = ["dep:defmt"]

[dependencies]
embedded-hal = "0.2"

# feature = use_defmt
defmt = { version = "0.3", optional = true }
