[package]
name = "pico"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tca9555 = { path = "../../tca9555", features = ["use_defmt"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.3"
embedded-hal ="0.2.5"
embedded-time = "0.12.0"
nb = "1"
panic-halt= "0.2.0"
rp-pico = "0.4"
